@@ -50,7 +50,7 @@ class ControlSchedulerPriority
 public:
     /**
      * Constructor. Not explicit for backward compatibility.
-     * \param priority, the desired priority value.
+     * \param priority the desired priority value.
      */
     ControlSchedulerPriority(short int priority): priority(priority) {}
 
